// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormattedAmount.vue > [FontSizeRate Medium, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-size-medium"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontSizeRate Medium, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-size-medium"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontSizeRate Medium; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-size-medium"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontSizeRate Medium]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-size-medium"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontSizeRate Normal, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontSizeRate Normal, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontSizeRate Normal; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontSizeRate Normal]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontSizeRate Small, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-size-small"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontSizeRate Small, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-size-small"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontSizeRate Small; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-size-small"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontSizeRate Small]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-size-small"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontWeightRate Medium, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-weight-medium"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontWeightRate Medium, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-weight-medium"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontWeightRate Medium; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-weight-medium"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontWeightRate Medium]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-weight-medium"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontWeightRate Normal, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontWeightRate Normal, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontWeightRate Normal; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontWeightRate Normal]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontWeightRate Small, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-weight-small"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontWeightRate Small, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-weight-small"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontWeightRate Small; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-weight-small"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [FontWeightRate Small]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--font-weight-small"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value With One Decimal Symbol, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value With One Decimal Symbol, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <span
      class="formatted-amount__prefix"
      data-v-742006e0=""
    >
      
      $
      
    </span>
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .80
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value With One Decimal Symbol; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <span
      class="formatted-amount__prefix"
      data-v-742006e0=""
    >
      
      $
      
    </span>
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .80
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value With One Decimal Symbol]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <span
      class="formatted-amount__prefix"
      data-v-742006e0=""
    >
      
      $
      
    </span>
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .80
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value With Two Decimal Symbols (default rounding); hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <span
      class="formatted-amount__prefix"
      data-v-742006e0=""
    >
      
      $
      
    </span>
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      0
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .09
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value With Two Decimal Symbols (default rounding)]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <span
      class="formatted-amount__prefix"
      data-v-742006e0=""
    >
      
      $
      
    </span>
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      0
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .09
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value Without Decimals, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value Without Decimals, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <span
      class="formatted-amount__prefix"
      data-v-742006e0=""
    >
      
      $
      
    </span>
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .00
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value Without Decimals; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <span
      class="formatted-amount__prefix"
      data-v-742006e0=""
    >
      
      $
      
    </span>
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .00
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value Without Decimals]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <span
      class="formatted-amount__prefix"
      data-v-742006e0=""
    >
      
      $
      
    </span>
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .00
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <span
      class="formatted-amount__prefix"
      data-v-742006e0=""
    >
      
      $
      
    </span>
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .89
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <span
      class="formatted-amount__prefix"
      data-v-742006e0=""
    >
      
      $
      
    </span>
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .89
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Fiat Value]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <span
      class="formatted-amount__prefix"
      data-v-742006e0=""
    >
      
      $
      
    </span>
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .89
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Small Fiat Value With Two Decimal Symbols (default rounding); hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <span
      class="formatted-amount__prefix"
      data-v-742006e0=""
    >
      
      $
      
    </span>
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      0
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .009
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Is Small Fiat Value With Two Decimal Symbols (default rounding)]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--fiat-value"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <span
      class="formatted-amount__prefix"
      data-v-742006e0=""
    >
      
      $
      
    </span>
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      0
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .009
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Symbol In Decimal Container, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--symbol-as-decimal"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <span
        class="formatted-amount__symbol"
        data-v-742006e0=""
      >
        XOR
      </span>
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Symbol In Decimal Container, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--symbol-as-decimal"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <span
        class="formatted-amount__symbol"
        data-v-742006e0=""
      >
        XOR
      </span>
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Symbol In Decimal Container; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--symbol-as-decimal"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <span
        class="formatted-amount__symbol"
        data-v-742006e0=""
      >
        XOR
      </span>
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Symbol In Decimal Container]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--symbol-as-decimal"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <span
        class="formatted-amount__symbol"
        data-v-742006e0=""
      >
        XOR
      </span>
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Value only, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Value only, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Value only; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Value only]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With "0" Value, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With "0" Value, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      0
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      />
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With "0" Value; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      0
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      />
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With "0" Value]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      0
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      />
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With "NaN" Value, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With "NaN" Value, value can be hidden]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With "NaN" Value; hide balances button was clicked]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With "NaN" Value]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With 0 Value, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With 0 Value, value can be hidden]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With 0 Value; hide balances button was clicked]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With 0 Value]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With Empty Value, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With Empty Value, value can be hidden]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With Empty Value; hide balances button was clicked]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With Empty Value]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With Infinity Value, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With Infinity Value, value can be hidden]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With Infinity Value; hide balances button was clicked]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With Infinity Value]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With Integer, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With Integer, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      />
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With Integer; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      />
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With Integer]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      />
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With Left Shift, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--shifted"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With Left Shift, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--shifted"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With Left Shift; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--shifted"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With Left Shift]: should be rendered correctly 1`] = `
<span
  class="formatted-amount formatted-amount--shifted"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With NaN Value, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With NaN Value, value can be hidden]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With NaN Value; hide balances button was clicked]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With NaN Value]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With asset symbol, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <!--v-if-->
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        ******
      </span>
      <!--v-if-->
    </span>
    <span
      class="formatted-amount__symbol"
      data-v-742006e0=""
    >
      XOR
    </span>
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With asset symbol, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <span
      class="formatted-amount__symbol"
      data-v-742006e0=""
    >
      XOR
    </span>
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With asset symbol; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <span
      class="formatted-amount__symbol"
      data-v-742006e0=""
    >
      XOR
    </span>
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With asset symbol]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <span
      class="formatted-amount__decimal"
      data-v-742006e0=""
    >
      <span
        class="formatted-amount__decimal-value"
        data-v-742006e0=""
      >
        .890123
      </span>
      <!--v-if-->
    </span>
    <span
      class="formatted-amount__symbol"
      data-v-742006e0=""
    >
      XOR
    </span>
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [With undefined Value, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With undefined Value, value can be hidden]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With undefined Value; hide balances button was clicked]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [With undefined Value]: should be rendered correctly 1`] = `<!--v-if-->`;

exports[`FormattedAmount.vue > [Without Decimals, value can be hidden; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      ******
    </span>
    <!--v-if-->
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Without Decimals, value can be hidden]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <!--v-if-->
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Without Decimals; hide balances button was clicked]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <!--v-if-->
    <!--v-if-->
    
    
  </span>
</span>
`;

exports[`FormattedAmount.vue > [Without Decimals]: should be rendered correctly 1`] = `
<span
  class="formatted-amount"
  data-v-742006e0=""
>
  <span
    class="formatted-amount__value"
    data-v-742006e0=""
  >
    <!--v-if-->
    <span
      class="formatted-amount__integer"
      data-v-742006e0=""
    >
      1,234,567
    </span>
    <!--v-if-->
    <!--v-if-->
    
    
  </span>
</span>
`;
